--- a/package.json
+++ b/package.json
@@ -1,21 +1,19 @@
 {
-  "name": "reveal.js",
-  "version": "2.6.0-dev",
-  "description": "The HTML Presentation Framework",
-  "homepage": "http://lab.hakim.se/reveal-js",
-  "subdomain": "revealjs",
+  "name": "git-complex-but-worth-it",
+  "version": "0.0.0",
+  "description": "presentation about git for glen downing's fall 2013 courses",
+  "homepage": "http://aaronstacy.com/git-complex-but-worth-it",
   "scripts": {
     "test": "grunt test",
-    "start": ""
+    "start": "grunt serve"
   },
   "author": {
-    "name": "Hakim El Hattab",
-    "email": "hakim.elhattab@gmail.com",
-    "web": "http://hakim.se"
+    "name": "Aaron Stacy",
+    "web": "http://aaronstacy.com"
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/hakimel/reveal.js.git"
+    "url": "git://github.com/aaronj1335/git-complex-but-worth-it.git"
   },
   "engines": {
     "node": "~0.8.0"
@@ -40,7 +38,7 @@
   "licenses": [
     {
       "type": "MIT",
-      "url": "https://github.com/hakimel/reveal.js/blob/master/LICENSE"
+      "url": "https://github.com/aaronj1335/git-complex-but-worth-it/blob/master/LICENSE"
     }
   ]
 }
